# fxpipe

./: .oh-plan  Cargo.toml  Dockerfile.deploy  README.md  config.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
data/: test.json
my_rust_project/: Cargo.toml
my_rust_project/src/: main.rs
src/: config.rs  function_extractor.rs  handlers.rs  llm_client.rs  main.rs  models.rs  routes.rs
src/routes/: mod.rs
