[package]
name = "fxpipe"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3.1.11" # Using specific newer version
poem-openapi = { version = "5.1.15", features = ["swagger-ui", "url"] } # Using specific newer version
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1" # Added serde_json
reqwest = { version = "0.11", features = ["json"] } # Keeping this as specified
chrono = { version = "0.4", features = ["serde"] } # Added chrono
tracing-subscriber = { version = "0.3", features = ["fmt"] } # Added tracing-subscriber
