[package]
name = "fxpipe"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3.1.11"
poem-openapi = { version = "5.1.15", features = ["swagger-ui", "url"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
regex = "1"
