[package]
name = "fxpipe"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
config = "0.13"
log = "0.4"
env_logger = "0.10"
regex = "1"
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
serial_test = "2"
